# MasterUiA

./: .gitmodules  README.md  frames.gv
tb_ws/bag_files/rosbag2_2023_02_10-09_47_43/: metadata.yaml  rosbag2_2023_02_10-09_47_43_0.db3
tb_ws/install/: local_setup.sh  setup.sh
tb_ws/install/tb3_cpp/share/tb3_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tb_ws/install/tb_cpp/share/tb_cpp/: package.bash  (+4 more)
tb_ws/log/: latest_build
tb_ws/map/: Masterlabben.yaml  uia_map.yaml
tb_ws/rosbag/rosbag2_2023_02_14-09_33_23/: metadata.yaml  rosbag2_2023_02_14-09_33_23_0.db3
tb_ws/src/lars/: README.md
tb_ws/src/tb3_cpp/: CMakeLists.txt  package.xml
tb_ws/src/tb3_cpp/launch/: full_launch.py  gazebo_launch.py  localization_launch.py  multi_nav2_launch.py  nav2_gazebo.py  nav2_gazebo_launch.py  nav2_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_launch.py  teleop.launch.py
tb_ws/src/tb3_cpp/params/: amcl_params.yaml  mapper_params_lifelong.yaml  nav2_param.yaml  tb3_param.yaml  test.rviz
tb_ws/src/tb3_cpp/src/: cmd_vel_pub_v0.py  cmd_vel_sub_v0.py  cmd_vel_subpub_v0.py  cmd_vel_subpub_v1.py  feedback.py  my_node.cpp  nav.py  node.py  odom_pub_v0.py  odom_sub_v0.py  pose.py  pose_pub_v0.py  pose_pub_v1.py  pose_pub_v2.py  pose_pub_v3.py  pose_pub_v4.py  pose_sub_v0.py  pose_sub_v1.py  publisher.py
tb_ws/src/tb_cpp/: CMakeLists.txt  package.xml
tb_ws/src/tb_cpp/launch/: tb_launch.py  test.launch.py
tb_ws/src/tb_cpp/params/: tbparams.yaml
tb_ws/src/tb_cpp/src/: my_node.cpp
(+13 files in other folders)
